@@ -19,16 +19,28 @@
 			<artifactId>spring-test</artifactId>
 		</dependency>
 		<dependency>
+  			<groupId>org.easymock</groupId>
+  			<artifactId>easymockclassextension</artifactId>
+		</dependency>
+		<dependency>
+  			<groupId>org.easymock</groupId>
+  			<artifactId>easymock</artifactId>
+		</dependency>
+		<dependency>
 			<groupId>org.hyperic.hq</groupId>
 			<artifactId>hq-server</artifactId> 
 			<version>${project.version}</version>
 		</dependency>
-		<dependency>
+			<dependency>
 			<groupId>org.hyperic.hq</groupId>
-			<artifactId>hq-server</artifactId>
+			<artifactId>hq-server</artifactId> 
 			<version>${project.version}</version>
 			<classifier>tests</classifier>
-			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.hyperic.hq.agent.handler</groupId>
+			<artifactId>hq-agent-handler-measurement</artifactId>
+			<version>${project.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.hyperic</groupId>
@@ -114,7 +126,7 @@
 					</execution>
 				</executions>
 				<configuration>
-					<argLine>-Xmx512m</argLine>
+					<argLine>-Xmx1024m -XX:MaxPermSize=192m -XX:-UseGCOverheadLimit</argLine>
 				</configuration>
 			</plugin>
 			<plugin>
