@@ -11,12 +11,14 @@
 	<properties>
 		<activemq.version>5.3.0</activemq.version>
 		<ajp.version>1.3</ajp.version>
+		<aspectj.version>1.6.5</aspectj.version>
 		<ant.version>1.7.1</ant.version>
 		<ant-contrib.version>1.0b2</ant-contrib.version>
 		<apache-taglibs.version>1.1.2</apache-taglibs.version>
 		<backport-util-concurrent.version>3.1</backport-util-concurrent.version>
 		<clover2.version>2.6.3</clover2.version>
 		<commons-fileupload.version>1.2.1</commons-fileupload.version>
+		<commons-io.version>1.3.2</commons-io.version>
 		<commons-logging.version>1.0.4</commons-logging.version>
 		<commons-pool.version>1.4</commons-pool.version>
 		<commons-validator.version>1.3.1</commons-validator.version>
@@ -31,8 +33,10 @@
 		<groovy.version>1.6.7</groovy.version>
 		<hibernate.version>3.2.6.ga</hibernate.version>
 		<hibernate-tools.version>3.2.3.GA</hibernate-tools.version>
+		<hqapi.version>4.0.0.M2</hqapi.version>
 		<httpclient.version>3.1</httpclient.version>
 		<j2ee-management.version>1.1</j2ee-management.version>
+        <jackson-mapper-asl.version>1.5.5</jackson-mapper-asl.version>
 		<jasypt.version>1.6</jasypt.version>
 		<jdom.version>1.1</jdom.version>
 		<jmock.version>1.2.0</jmock.version>
@@ -41,7 +45,6 @@
 		<json.version>20090211</json.version>
 		<jsp.version>2.1</jsp.version>
 		<jstl.version>1.1.2</jstl.version>
-		<jta.version>1.1</jta.version>
 		<jug.version>2.0.0</jug.version>
 		<junit.version>4.6</junit.version>
 		<log4j.version>1.2.14</log4j.version>
@@ -50,12 +53,12 @@
 		<mysql.connector.version>5.1.10</mysql.connector.version>
 		<oro.version>2.0.8</oro.version>
 		<postgresql.agent.driver.version>7.4.3</postgresql.agent.driver.version>
-		<postgresql.server.driver.version>8.2-505.jdbc3</postgresql.server.driver.version>
-		<quartz.version>1.7.3</quartz.version>
+		<postgresql.server.driver.version>8.2-511-A.jdbc3</postgresql.server.driver.version>
+		<quartz.version>1.7.2</quartz.version>
 		<roo.version>1.0.2.RELEASE</roo.version>
 		<servlet-api.version>2.4</servlet-api.version>
 		<sigar.version>1.6.4</sigar.version>
-		<snmp.version>1.10.1</snmp.version>
+		<snmp.version>1.11</snmp.version>
 		<spring-framework.version>3.0.1.RELEASE</spring-framework.version>
 		<spring-security.version>3.0.0.RELEASE</spring-security.version>
 		<struts.version>1.3.10</struts.version>
@@ -107,6 +110,11 @@
 				<version>${commons-fileupload.version}</version>
 			</dependency>
 			<dependency>
+				<groupId>commons-io</groupId>
+				<artifactId>commons-io</artifactId>
+				<version>${commons-io.version}</version>
+			</dependency>
+			<dependency>
 				<groupId>commons-pool</groupId>
 				<artifactId>commons-pool</artifactId>
 				<version>${commons-pool.version}</version>
@@ -130,11 +138,6 @@
 				<groupId>javax.mail</groupId>
 				<artifactId>mail</artifactId>
 				<version>${mail.version}</version>
-			</dependency>
-			<dependency>
-				<groupId>javax.transaction</groupId>
-				<artifactId>jta</artifactId>
-				<version>${jta.version}</version>
 			</dependency>
 			<dependency>
 				<groupId>log4j</groupId>
@@ -161,6 +164,11 @@
 				<artifactId>velocity</artifactId>
 				<version>${velocity.version}</version>
 			</dependency>
+            <dependency>
+                <groupId>org.codehaus.jackson</groupId>
+                <artifactId>jackson-mapper-asl</artifactId>
+                <version>${jackson-mapper-asl.version}</version>
+            </dependency>
 			<!--  We use a version of dbunit that we patched -->
 			<dependency>
 				<groupId>org.hyperic</groupId>
@@ -182,6 +190,12 @@
 				<groupId>org.hibernate</groupId>
 				<artifactId>hibernate</artifactId>
 				<version>${hibernate.version}</version>
+				<exclusions>
+                	<exclusion>
+                		<groupId>javax.transaction</groupId>
+                   		<artifactId>jta</artifactId>
+                	</exclusion>
+				</exclusions>
 			</dependency>
 			<dependency>
 				<groupId>org.hibernate</groupId>
@@ -197,6 +211,11 @@
 				<groupId>org.hyperic</groupId>
 				<artifactId>sigar</artifactId>
 				<version>${sigar.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.hyperic.hq.hqapi</groupId>
+				<artifactId>hqapi1</artifactId>
+				<version>${hqapi.version}</version>
 			</dependency>
 			<dependency>
 				<groupId>org.jasypt</groupId>
@@ -333,6 +352,11 @@
 				<groupId>org.quartz-scheduler</groupId>
 				<artifactId>quartz</artifactId>
 				<version>${quartz.version}</version>
+			</dependency>
+			<dependency>
+			  	<groupId>org.quartz-scheduler</groupId>
+                <artifactId>quartz-oracle</artifactId>
+                <version>${quartz.version}</version>
 			</dependency>
 			<dependency>
 				<groupId>org.springframework.security</groupId>
@@ -498,6 +522,11 @@
 				<version>${mx4j.version}</version>
 			</dependency>
 			<dependency>
+    			<groupId>org.aspectj</groupId>
+    			<artifactId>aspectjrt</artifactId>
+    			<version>${aspectj.version}</version>
+			</dependency>
+			<dependency>
 				<groupId>com.cenqua.clover</groupId>
 				<artifactId>clover</artifactId>
 				<version>${clover2.version}</version>
@@ -509,6 +538,17 @@
 	<build>
 		<pluginManagement>
 			<plugins>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-jar-plugin</artifactId>
+                    <executions>
+                        <execution>
+                            <goals>
+                                <goal>test-jar</goal>
+                            </goals>
+                        </execution>
+                    </executions>
+                </plugin>
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-compiler-plugin</artifactId>
@@ -569,9 +609,26 @@
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-surefire-plugin</artifactId>
 					<configuration>
-						<argLine>-Xmx512m</argLine>
+						<argLine>-Xmx512m -XX:MaxPermSize=192m -XX:-UseGCOverheadLimit</argLine>
 						<enableAssertions>false</enableAssertions>
 					</configuration>
+				</plugin>
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-source-plugin</artifactId>
+					<version>2.0.3</version>
+					<configuration>
+						<attach>true</attach>
+					</configuration>
+					<executions>
+						<execution>
+							<id>attach-sources</id>
+							<phase>verify</phase>
+							<goals>
+								<goal>jar</goal>
+							</goals>
+						</execution>
+					</executions>
 				</plugin>
 			</plugins>
 		</pluginManagement>
@@ -642,7 +699,7 @@
 	    			<module>dist</module>
 			</modules>
 		</profile>
-			<profile>
+        <profile>
 			<id>no-dist</id>
 			<modules>
 					<module>hq-util</module>
@@ -656,6 +713,17 @@
 					<module>hq-uiplugin</module>
 					<module>hq-installer</module>
 					<module>hq-bootstrap</module>
+					<module>hq-web</module>
+			</modules>
+		</profile>
+        <profile>
+			<id>web-app</id>
+			<modules>
+					<module>hq-util</module>
+					<module>hq-common</module>
+					<module>hq-pdk</module>
+					<module>hq-rendit</module>
+					<module>hq-server</module>
 					<module>hq-web</module>
 			</modules>
 		</profile>
@@ -695,34 +763,9 @@
 
 	<repositories>
 		<repository>
-			<id>hyperic-snapshot</id>
-			<name>Hyperic Snapshot Repository</name>
-			<url>http://maven.hyperic.org/snapshot</url>
-			<snapshots>
-				<enabled>true</enabled>
-			</snapshots>
-		</repository>
-
-		<repository>
 			<id>hyperic-external</id>
 			<name>Hyperic External Dependencies Repository</name>
 			<url>http://maven.hyperic.org/external</url>
-			<snapshots>
-				<enabled>false</enabled>
-			</snapshots>
-		</repository>
-		<repository>
-			<id>hyperic-release</id>
-			<name>Hyperic Release Repository</name>
-			<url>http://maven.hyperic.org/release</url>
-			<snapshots>
-				<enabled>false</enabled>
-			</snapshots>
-		</repository>
-		<repository>
-			<id>hyperic-milestone</id>
-			<name>Hyperic Milestone Repository</name>
-			<url>http://maven.hyperic.org/milestone</url>
 			<snapshots>
 				<enabled>false</enabled>
 			</snapshots>
